--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
