--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "airbnb",
+      "airbnb/hooks"
+    ]
   },
   "browserslist": {
     "production": [
