--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^3.26.8",
     "eslint": "^7.9.0",
     "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -31,6 +32,14 @@
       "react-app",
       "airbnb",
       "airbnb/hooks"
+    ]
+  },
+  "lint-staged": {
+    "*.+(js|jsx|ts|tsx)": [
+      "eslint --fix"
+    ],
+    "*.+(json|css|md)": [
+      "prettier --write"
     ]
   },
   "browserslist": {
