--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^7.9.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
