--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
       "airbnb/hooks"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
       "eslint --fix"
