--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,6 +59,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^4.1.2"
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "typescript": "^3.7.5"
   }
 }
