--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
   "rules": {
     "no-use-before-define": "off",
     "react/jsx-filename-extension": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "import/extensions": "off",
+    "import/no-unresolved": "off"
   }
 }
